--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         },
 
         title: {
-          text: 'Devan-Highcharts scatter chart from CSV'  // EDIT to insert your chart title
+          text: 'Devan-Income by Grades Highcharts scatter chart from CSV'  // EDIT to insert your chart title
         },
 
         subtitle: {
@@ -52,13 +52,13 @@
 
         xAxis: {
           title: {
-            text: 'Grades'  // EDIT to insert horizontal x-axis label
+            text: 'Income'  // EDIT to insert horizontal x-axis label
           }
         },
 
         yAxis: {
           title: {
-            text: 'Income'   // EDIT to insert vertical y-axis label
+            text: 'Grades'   // EDIT to insert vertical y-axis label
           }
         },
 
